# voicepulse-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_alignment.py  test_diarization.py  test_transcription.py  voicepulse.db
app/: auth.py  database.py  main.py  models.py
app/routers/: analysis.py  auth.py  dashboard.py
app/services/: audio_preprocessing.py  data_organizer.py  diarization.py  emotion_detector.py  metrics_calculator.py  report_generator.py  segment_extractor.py  sentiment_analyzer.py  speaker_text_align.py  speech_to_text.py  transcription.py  whisperx_service.py
app/templates/: dashboard.html  login.html  signup.html
