[project]
name = "voicepulse-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Farid-Bytes",email = "mazharfarid313@gmail.com"}
]
readme = "README.md"

# CHANGED: Restricted max version to <3.14 to satisfy WhisperX requirements
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi (>=0.128.7,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pydantic (>=2.12.5,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pyannote-audio (>=4.0.4,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "whisperx (>=3.8.2,<4.0.0)",
    "speechbrain (>=1.0.3,<2.0.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "groq (>=1.1.1,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)" 
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"